Traducir y ordenar navegacion

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,14 +14,14 @@
             </div>
             <div>
                 <a href="{{ relativebase }}tags.html">
-                    Tags
+                    Categorías
                 </a>
             </div>
-            <div>
+            <!-- <div>
                 <a href="{{ relativebase }}about.html">
                     About
                 </a>
-            </div>
+            </div> -->
         </div>
     </div>
 </footer> <!-- End Footer -->
