traduzco post por articulos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
         <div class="footer-nav">
             <div>
                 <a href="{{ relativebase }}archive.html">
-                    Posts
+                    Todos los artículos
                 </a>
             </div>
             <div>
