--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,6 +31,7 @@ layout: default
         {% include github-button.html %}
         {{page.content | markdownify}}
         {% include sidebar.html context="post" class="inline" id="post-end" %}
+        <div class="separator"></div>
         {% include recent-post.html %}
       </div>
     </div> <!-- End Wrapper -->
