--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1546,7 +1546,7 @@ img + small, img + br + small {
 .recent-box {
   margin-top: 30px;
   padding-bottom: 30px;
-  border-bottom: 1px solid var(--grey4)
+  /* border-bottom: 1px solid var(--grey4) */
 }
 .recent-list {
   font-size: 0.7em
