--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,10 @@
                     Categorías
                 </a>
             </div>
+            <div>
+                <span>Síguenos en las redes: </span><a class="social" href="https://www.instagram.com/friki.peques/" title="Instagram" rel="nofollow" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </div>
+
             <!-- <div>
                 <a href="{{ relativebase }}about.html">
                     About
