--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,6 +63,10 @@
               </div>
             </a>
           </li>
+          <li>
+            <p>Síguenos en las redes:</p>
+            <a class="social" href="https://www.instagram.com/friki.peques/" title="Instagram" rel="nofollow" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> friki.peques</a>
+          </li>
         </ul>
       </nav>
       {% capture logo_url %}{{ relativebase }}{{ site.logo  }}{% endcapture %}
