--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,14 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#311e3e">
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GX0KSKW2DC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GX0KSKW2DC');
+</script>
 	<style>
 /* latin */
 @font-face {
